# Smart-Mirror

./: .gitignore  CMakeLists.txt  LICENSE  README.md
frontend/: app.js  index.html  style.css
frontend/icons/: LICENSE-SL_logo.txt  LICENSE-weather-icons.txt  weather-icons.css
src/: CMakeLists.txt
src/clock/: clock.cc
src/helpers/: helper.cc  helper.h
src/transport/: transport.cc  transport.h
src/weather/: weather.cc
sw/include/clock/: clock.h
sw/include/helpers/: helper.h
sw/include/http/: http_server.h
sw/include/transport/: departure.h  departure_group.h
sw/include/weather/: weather.h
sw/src/: main.cc
sw/src/clock/: clock.cc
sw/src/helpers/: helper.cc
sw/src/http/: http_server.cc
sw/src/transport/: departure.cc  departure_group.cc  transport.cc
sw/src/weather/: weather.cc
